work/214/Chain_C++/compile_stderr_1.txt
source_1.cpp: In function ‘int main(int, char**)’:
source_1.cpp:7:1: error: expected ‘;’ before ‘}’ token
 }
 ^
